# pybeli

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  ruff.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
config/: config.yaml
src/pybeli/cli/: main.py
src/pybeli/indicators/: indicator.py  rsi.py
src/pybeli/models/: candle.py  config.py  graph.py  period.py  rsi.py  signal.py  stock.py  trade.py
src/pybeli/services/: fetch_stock.py
src/pybeli/strategies/: rsistrategy.py  strategy.py
tests/cli/: test_main.py
tests/indicators/: test_rsi.py
tests/models/: test_candle.py  test_config.py  test_graph.py  test_rsi.py  test_stock.py  test_trade.py  utils.py
tests/services/: test_fetch_stock.py
tests/strategies/: test_rsistrategy.py
