[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pybeli"
version = "0.1.0"
description = "A simple CLI tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
]

[project.scripts]
pybeli = "pybeli.cli.main:main"

[dependency-groups]
dev = [
    "mypy>=1.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "pre-commit>=3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pybeli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
strict = true
python_version = "3.12"
files = ["src"]
